--- a/base.gradle
+++ b/base.gradle
@@ -1,13 +1,25 @@
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+group = 'com.tcurt628.smartshop'
+
 ext {
     commonsLangVersion = "3.4"
     junitVersion = "4.12"
     xenonVersion = "0.7.0"
 }
 
+apply plugin: 'maven'
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "file://localhost/Users/tcurtis/.m2/repository")
+        }
+    }
+}
+
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
