--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -1,41 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.tcurt628</groupId>
-  <artifactId>xenon-sample</artifactId>
+  <groupId>com.tcurt628.smartshop</groupId>
+  <artifactId>product-service</artifactId>
   <version>1.0.0</version>
-
+  <properties>
+      <xenon.version>0.7.0</xenon.version>
+      <commons-lang.version>3.4</commons-lang.version>
+      <junit.version>4.12</junit.version> 
+  </properties>
   <dependencies>
     <dependency>
       <groupId>com.vmware.xenon</groupId>
       <artifactId>xenon-common</artifactId>
-      <version>0.7.0</version>
+      <version>${xenon.version}</version>
     </dependency>
     <dependency>
       <groupId>com.vmware.xenon</groupId>
       <artifactId>xenon-common</artifactId>
-      <version>0.7.0</version>
+      <version>${xenon.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.14</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.4</version>
+      <version>${commons-lang.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
