Refactored Gradle Build: Subprojects with model/service
I refactored the gradle build for each microservice (ie: `product-app`
and `review-app`). I also removed `base.gradle` to make it clear that
these two microservices are built/versioned completely independently
from each other.

I also moved the "model" classes out of the Xenon Service.java class
and into the "model" subproject. The "service" subproject uses the
"model" classes via a project dependency.

The next step to use a inter-service "model" dependency from
product-model to review-service. This dependency will be completely
isolated and independent from the other microservice (ie: it is NOT
a subproject dependenecy).

--- a/dns-service/build.gradle
+++ b/dns-service/build.gradle
@@ -4,8 +4,31 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '1.2.3' // builds fat jar with 'shadowJar' task
 }
 
-apply from: '../base.gradle'
+group = 'com.tcurt628.smartshop.product'
 version = '1.0.0'
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
+ext {
+    commonsLangVersion = "3.4"
+    junitVersion = "4.12"
+    xenonVersion = "0.7.1"
+}
+
+dependencies {
+    compile "com.vmware.xenon:xenon-common:$xenonVersion"
+    compile "com.vmware.xenon:xenon-ui:$xenonVersion"
+    compile "com.vmware.xenon:xenon-dns:$xenonVersion"
+    compile "org.apache.commons:commons-lang3:$commonsLangVersion"
+    testCompile "com.vmware.xenon:xenon-common:$xenonVersion:tests"
+    testCompile "junit:junit:$junitVersion"
+}
 
 jar {
     manifest {
@@ -13,7 +36,8 @@ jar {
     }
 }
 
-dependencies {
-    compile "com.vmware.xenon:xenon-common:$xenonVersion","com.vmware.xenon:xenon-ui:$xenonVersion","com.vmware.xenon:xenon-dns:$xenonVersion"
-    testCompile "com.vmware.xenon:xenon-common:$xenonVersion:tests"
+build.dependsOn shadowJar // Call "shadowJar" task before "build"
+
+task wrapper(type: Wrapper) {
+    gradleVersion = "2.3"
 }
