Added (and using) product-model dependency for review-service

--- a/review-app/service/review-service.gradle
+++ b/review-app/service/review-service.gradle
@@ -13,4 +13,5 @@ jar {
 dependencies {
     compile project(':review-model')
     compile "com.vmware.xenon:xenon-dns:$xenonVersion"
+    compile "com.tcurt628.smartshop.product:product-model:$smartshopProductVersion"
 }
