Added DNS Query Class to Facilitate Interacting with DNS
There was a lot of boilerplate DNS logic baked into `ReviewService`
which really needed to be extracted to a common class that could be
reused by any class that wanted to do DNS lookups...

Therefore, I created `SmartShopDnsQueries` in the `dns-service`
"application", and added a Maven dependency on it (which, like the
dependency for `product-service`, is independently versioned and
maintained).

--- a/dns-service/build.gradle
+++ b/dns-service/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
+    id 'maven'
     id 'idea'
     id 'com.github.johnrengelman.shadow' version '1.2.3' // builds fat jar with 'shadowJar' task
 }
 
-group = 'com.tcurt628.smartshop.product'
+group = 'com.tcurt628.smartshop.dns'
 version = '1.0.0'
 
 sourceCompatibility = 1.8
